@@ -29,11 +29,6 @@ if ![is_elf_format] {
     return
 }
 
-# hpux assembly is weird
-if [istarget "hppa*-*-hpux*"] {
-    return
-}
-
 proc test_sort_common {} {
     global exec_output
     global objdump
@@ -181,10 +176,9 @@ proc assembler_generates_commons {} {
     return 1
 }
 
-# Explicitly use "-fcommon" so that even if $CFLAGS includes
-# "-fno-common", these tests are compiled as expected.
-if {   ![ld_compile "$CC $CFLAGS -fcommon" $srcdir/$subdir/common1a.c tmpdir/common1a.o]
-    || ![ld_compile "$CC $CFLAGS -fcommon" $srcdir/$subdir/common1b.c tmpdir/common1b.o] } {
+
+if {   ![ld_compile "$CC $CFLAGS" $srcdir/$subdir/common1a.c tmpdir/common1a.o]
+    || ![ld_compile "$CC $CFLAGS" $srcdir/$subdir/common1b.c tmpdir/common1b.o] } {
     unresolved $test1
     return
 }
@@ -209,8 +203,8 @@ if { [ld_simple_link $ld tmpdir/common1.o $options] } {
 }
 
 # This test fails on MIPS because the backend sets type_change_ok.
-# The size change warning is suppressed.  Same on hppa64.
-if {[istarget mips*-*-*] || [istarget hppa*64*-*-*]} {
+# The size change warning is suppressed.
+if {[istarget mips*-*-*]} {
     if { ![regexp "Warning: alignment (\[0-9\]+) of symbol \`_?foo1\' in tmpdir/common1b.o is smaller than 64 in tmpdir/common1a.o" $link_output] } {
         fail $test1w1
     } else {
